ingress-minikube/web1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web1-deployment
  template:
    metadata:
      labels:
        app: web1-deployment
    spec:
      containers:
        - name: web1-application
          image: gcr.io/google-samples/hello-app:1.0
          ports:
            - containerPort: 8080
