ingress-minikube/web1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web1-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: web1-deployment
  type: NodePort
