ingress-minikube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
      - http:
          paths:
            - path: /*
              backend:
                serviceName: web1-service
                servicePort: 80
